# ai_vs_human_text

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: train_model.py
src/ai_vs_human_text/: __init__.py  cli.py  config.py  deps.py  exceptions.py  logging_config.py  mcp_server.py  schemas.py
src/ai_vs_human_text/agent/: __init__.py  orchestrator.py  schemas.py  tool_repair.py
src/ai_vs_human_text/api/: __init__.py  app.py  routes.py
src/ai_vs_human_text/ml/: __init__.py  classifier.py  train.py
src/ai_vs_human_text/services/: __init__.py  http_client.py  llm.py
tests/: conftest.py  test_api.py  test_classifier.py  test_tool_repair.py
