[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-vs-human-text"
version = "1.0.0"
description = "Production AI vs human text detection with FastAPI, FastMCP, and optional LLM agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nitish Pawale" }]
keywords = ["mcp", "fastmcp", "llm", "classification", "nlp", "fastapi"]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "httpx>=0.26.0",
    "fastmcp>=2.0.0",
    "groq>=0.4.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.3.0",
]

[project.scripts]
ai-vs-human-api = "ai_vs_human_text.cli:run_api"
ai-vs-human-mcp = "ai_vs_human_text.cli:run_mcp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
